# OSAGOcalculator

./: CMakeLists.txt
Calculator/: AddFunctions.cpp  AddFunctions.h  Calculation.cpp  Calculation.h  Calculator.pro  introduction.cpp  introduction.h  introduction.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resource.qrc  secondwindow.ui
Calculator/data/: ForKBC.txt  ForKBM.txt  ForKC.txt  ForKM.txt  ForKT.txt  ForKTlist.txt
build-Calculator-Desktop_Qt_5_15_2_MSVC2019_64bit-Debug/: Makefile  Makefile.Debug  Makefile.Release  ui_introduction.h  ui_mainwindow.h
build-Calculator-Desktop_Qt_5_15_2_MSVC2019_64bit-Debug/debug/: Calculator.ilk  moc_introduction.cpp  moc_mainwindow.cpp  qrc_resource.cpp
